Move the "Try Again" section to a yellow banner, adjust the button, and fix spacing between the "Finish Installing" and "Having trouble?"
Make no javascript look..acceptable.

Tighten up the line-height

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -19,6 +19,7 @@
   grey-lightest: #b1b1b3;
   blue-dark: #36385A;
   orange: #ff9500;
+  yellow-banner: #fff260;
   blue-lightest: #B2D9FF;
   blue: #0080FF;
   blue-dark: #245CAD;
@@ -132,7 +133,7 @@
   h-8: 2rem;
   // h-10: 2.5rem;
   // h-12: 3rem;
-  // h-16: 4rem;
+  h-16: 4rem;
   // h-20: 5rem;
   // h-24: 6rem;
   // h-32: 8rem;
